refactor:financial health
